fixed mask image padding and some layout issue for mobile view

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ nav{
     background-color: teal;
 }
 
-#navi-list{
+.navi-list{
     display: flex;
     justify-content: flex-end;
     list-style: none;
@@ -28,7 +28,7 @@ nav{
 .nav-links{
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    font-size: 15px;
+    font-size: 12px;
     text-decoration: none;
     color: whitesmoke;
 }
@@ -60,7 +60,7 @@ nav{
 
 /* Navbar animation */
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 500px){
     .clothing-div{
         display: flex;
         flex-direction: column;
@@ -77,17 +77,34 @@ nav{
         flex-direction: column;
     }
 
-    .nav-links{
-        font-size: 0.7rem;
-    }
+    /* .nav-links{
+        font-size: 12px;
+    } */
 
     .logo{
         display: flex;
         justify-content: center;
     }
-    /* .collar-img{
-        width: 25%;
-    } */
+
+    .navi-list{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        list-style: none;
+    }
+
+    input[type=submit]{
+        margin: 10px;
+    }
+    .collar-img{
+        display: none;
+    }
+    .mask-image{
+        /* margin-bottom: 30px; */
+        /* padding: 30px; */
+        width: 300px;
+        height: 300px;
+    }
 }
 
 
@@ -140,20 +157,23 @@ input[type=submit]:hover{
     margin-top: 6px;
 }
 
-.row:after{
+.row1:after{
     content: "";
     display: table;
     clear: both;
 }
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 500px){
     .form-col, .form-col2, input[type=submit]{
         width: 100%;
         margin-top: 0;
     }
 }
 
+
 .mask-image{
+    /* margin-bottom: 30px; */
+    padding: 30px;
     width: 300px;
     height: 300px;
 }
@@ -189,6 +209,9 @@ input[type=submit]:hover{
     float: right;
     margin: 0 0 0 30px;
     clear: both;
+}
+
+@media screen and (max-width:500px){
 }
 
 
